--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,17 @@
 [build]
   command = "chmod +x .netlify/build.sh && bash .netlify/build.sh"
   publish = "_site"
-  environment = { PHP_VERSION = "7.2", CECIL_VERSION = "5.36.0", RUBY_VERSION = "2.6.2" }
+  environment = { PHP_VERSION = "7.2", CECIL_VERSION = "5.36.0" }
 
 [context.deploy-preview]
-  command = "chmod +x .netlify/build.sh && bash .netlify/build.sh $DEPLOY_PRIME_URL"
+  command = "chmod +x .netlify/build.sh && bash .netlify/build.sh preview"
 
 [context.branch-deploy]
-  command = "chmod +x .netlify/build.sh && bash .netlify/build.sh $DEPLOY_PRIME_URL"
+  command = "chmod +x .netlify/build.sh && bash .netlify/build.sh preview"
 
 [template.environment]
-  CECIL_SITE_TITLE = "Blog's title"
-  CECIL_SITE_BASELINE = "Short description (~ 20 characters)"
-  CECIL_SITE_DESCRIPTION = "Full description (~ 250 characters)"
+  CECIL_TITLE = "Blog's title"
+  CECIL_BASELINE = "Short description (~ 20 characters)"
+  CECIL_DESCRIPTION = "Full description (~ 250 characters)"
+  CECIL_AUTHOR = "Your name"
+  CECIL_THEME = "Theme (use 'hyde' or 'garth')"
